:bento: add a background

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
-
+<canvas  width="288" height="511" id="my-canvas">  </canvas>
 </body>
 <script src="dist/js/main.js"></script>
 </html>
